# dealii-spirk

./: CMakeLists.txt  README.md  gmg.cc  main.cc
.github/workflows/: tests.yml
experiments-skx/: README.MD  large-scaling-create-job-files-gmg.py  large-scaling-create-job-files.py  parameters-0048.cmd  parameters-0768.cmd  parameters-3072.cmd
include/: operator.h  preconditioner.h
json/: complex_irk.json  complex_irk_batched.json  complex_spirk.json  complex_spirk_batched.json  irk.json  irk_batched.json  ost.json  spirk.json  spirk_sm.json
scripts/: default.json  generate_json_files.json  generate_json_files.py  large_scaling.py  parameters_all_q.py  parameters_dt.py  parameters_p.py  parameters_q.py  parameters_tolerance.py  parameters_vt.py  small_scaling.py
tables/: A10.txt  A2.txt  A3.txt  A4.txt  A5.txt  A6.txt  A7.txt  A8.txt  A9.txt  A_inv10.txt  A_inv2.txt  A_inv3.txt  A_inv4.txt  A_inv5.txt  A_inv6.txt  A_inv7.txt  A_inv8.txt  A_inv9.txt  D_vec_10.txt  D_vec_2.txt  D_vec_3.txt  D_vec_4.txt  D_vec_5.txt  D_vec_6.txt  D_vec_7.txt  D_vec_8.txt  D_vec_9.txt  D_vec_im_2.txt  D_vec_im_3.txt  D_vec_im_4.txt  D_vec_im_5.txt  D_vec_im_6.txt  D_vec_im_7.txt  D_vec_im_8.txt  D_vec_im_9.txt  D_vec_re_3.txt  D_vec_re_4.txt  D_vec_re_5.txt  D_vec_re_6.txt  D_vec_re_7.txt  (+81 more)
tables/complex/: D_vec_imag_4.txt  T_imag_4.txt  T_inv_imag_4.txt  T_inv_real_4.txt  T_real_4.txt
